Refactor FileDiscoveryServiceTest